增加报警页面下拉选择接口
