# cmd/prom_server/openapi.yaml
@@ -283,6 +283,65 @@ paths:
                     application/json:
                         schema:
                             type: object
+    /api/alarmPage/selectList:
+        get:
+            operationId: GetSelectList
+            responses:
+                200:
+                    description: ""
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    list:
+                                        type: array
+                                        title: List
+                                        items:
+                                            properties:
+                                                color:
+                                                    type: string
+                                                    title: Color
+                                                icon:
+                                                    type: string
+                                                    title: Icon
+                                                label:
+                                                    type: string
+                                                    title: Label
+                                                remark:
+                                                    type: string
+                                                    title: Remark
+                                                status:
+                                                    type: object
+                                                    title: Status
+                                                value:
+                                                    type: object
+                                                    title: Value
+                                            type: object
+                                    page:
+                                        type: object
+                                        title: Page
+            parameters:
+                - name: curr
+                  in: query
+                  schema:
+                    type: integer
+                    title: Curr
+                - name: size
+                  in: query
+                  schema:
+                    type: integer
+                    title: Size
+                - name: keyword
+                  in: query
+                  schema:
+                    type: string
+                    title: Keyword
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            type: object
     /api/promDict/create:
         post:
             operationId: Create
